--- a/package.json
+++ b/package.json
@@ -19,9 +19,18 @@
   },
   "homepage": "https://github.com/yechankim0531/agent_roundtable#readme",
   "devDependencies": {
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.3",
     "vite": "^7.0.2"
+  },
+  "dependencies": {
+    "lucide-react": "^0.525.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   }
 }
